remove width and height styles on <body> - clipping of the heading into the favourites bar would occur - removing these fields would prevent that

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,4 @@
 body {
-  height: 100vh;
-  width: 100vw;
   margin: 0;
   padding: 0;
   display: flex;
